ejercicios HTML y CSS

--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div id="inline">
-                <img id="foto" src="D:\fotocv.png" alt="foto">
+                <img id="foto" src="fotocv.png" alt="foto">
             </div>
     </div>
     <div>
